--- a/tutoring-site/package.json
+++ b/tutoring-site/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.5",
     "firebase": "^9.8.4",
     "firebase-admin": "^11.0.0",
     "next": "12.1.6",
