--- a/tutoring-site/package.json
+++ b/tutoring-site/package.json
@@ -9,12 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-<<<<<<< HEAD
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.5",
-=======
->>>>>>> 28ce46d (added scss)
     "firebase": "^9.8.4",
     "firebase-admin": "^11.0.0",
     "next": "12.1.6",
@@ -23,6 +20,7 @@
   },
   "devDependencies": {
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "sass": "^1.53.0"
   }
 }
