--- a/tutoring-site/package.json
+++ b/tutoring-site/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "firebase": "^9.8.4",
     "firebase-admin": "^11.0.0",
