--- a/tutoring-site/package.json
+++ b/tutoring-site/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "@react-icons/all-files": "^4.1.0",
     "firebase": "^9.8.4",
     "firebase-admin": "^11.0.0",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "eslint": "8.18.0",
