--- a/tutoring-site/package.json
+++ b/tutoring-site/package.json
@@ -16,10 +16,11 @@
     "@react-icons/all-files": "^4.1.0",
     "firebase": "^9.8.4",
     "firebase-admin": "^11.0.0",
-    "next": "12.1.6",
+    "next": "^14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "eslint": "8.18.0",
