--- a/tutoring-site/package.json
+++ b/tutoring-site/package.json
@@ -26,5 +26,8 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "sass": "^1.53.0"
-  }
+  },
+  "engines": {
+    "node": "18.17.0"
+  },
 }
